<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout
        android:id="@+id/create_title"
        style="@style/app_title" >

        <ImageView
            android:id="@+id/create_title_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/title_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/create_title_icon"
            android:text="@string/create_btn"
            android:textColor="@color/white" />
    </RelativeLayout>
     <EditText
        android:layout_centerInParent="true"
        android:id="@+id/createfile_name_ed"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:hint="@string/create_file"
        android:gravity="center"
        android:background="@drawable/edit_styles"/>
    <Button
        android:id="@+id/createfile_name_btn"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/createfile_name_ed"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/bottom_create"
        android:background="@drawable/login_btn"/>

</RelativeLayout>
