<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout 
        style="@style/app_title"
        >
        <ImageView 
            android:id="@+id/register_title_returns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/returns"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"/>
        <TextView 
            android:layout_toRightOf="@+id/register_title_returns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/register_btn"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

   <LinearLayout 
        android:id="@+id/register_context"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true">

    <EditText
        android:id="@+id/register_user"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/black"
        android:hint="@string/login_user"
        android:gravity="center"
        android:digits="1234567890qwertyuiopasdfghjklzxcvbnm"
        android:background="@drawable/edit_styles"
        android:inputType="text"
        android:maxLength="13"
        android:layout_margin="8dp"
        />
    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/black"
        android:hint="@string/login_password"
        android:gravity="center"
        android:maxLength="13"
        android:inputType="textPassword"
        android:background="@drawable/edit_styles"
        android:layout_margin="8dp"/>
    <EditText
        android:id="@+id/register_password2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/black"
        android:hint="@string/register_password"
        android:gravity="center"
        android:maxLength="13"
        android:inputType="textPassword"
        android:background="@drawable/edit_styles"
        android:layout_margin="8dp"/>
   <Button 
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        android:background="@drawable/login_btn"
        android:text="@string/register_btn"/>
 </LinearLayout>

</RelativeLayout>
