<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff" >

    <RelativeLayout style="@style/app_title" >

        <ImageView
            android:id="@+id/login_title_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/title_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/login_title_icon"
            android:text="@string/login_btn"
            android:textColor="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/login_context"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/login_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon" />

        <EditText
            android:id="@+id/login_user"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:background="@drawable/edit_styles"
            android:gravity="center"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnm"
            android:maxLength="13"
            android:inputType="text"
            android:hint="@string/login_user"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:background="@drawable/edit_styles"
            android:gravity="center"
            android:maxLength="13"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnm"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:background="@drawable/login_btn"
            android:text="@string/login_btn" />
    </LinearLayout>

    <TextView
        android:id="@+id/login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_context"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:text="@string/login_register"
        android:textColor="@color/black" />

</RelativeLayout>