<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/transmssion_title"
        style="@style/app_title" >

        <ImageView
            android:id="@+id/transmssion_title_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/returns" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/transmssion_title_icon"
            android:text="@string/transmssion_btn"
            android:textColor="@color/white" />
    </RelativeLayout>
    <LinearLayout 
        android:id="@+id/transmssion_fragment_tab"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_below="@+id/transmssion_title">
        <LinearLayout
            android:clickable="true"
            android:id="@+id/up_linearlayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <View 
                android:id="@+id/transmssion_upload_fragment_view"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>
        <TextView 
            android:gravity="center"
            android:id="@+id/transmssion_upload_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/transmssion_btn_upload"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/down_linearlayout"
            android:clickable="true"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <View 
                android:id="@+id/transmssion_download_fragment_view"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>
         <TextView 
            android:gravity="center"
            android:id="@+id/transmssion_download_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/transmssion_btn_download"/>
          </LinearLayout>
    </LinearLayout>
    
    <FrameLayout 
        android:id="@+id/transmission_content"
        android:layout_below="@+id/transmssion_fragment_tab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>
    

</RelativeLayout>